--- a/web/styles/styles.css
+++ b/web/styles/styles.css
@@ -15,17 +15,17 @@ a:hover {
 	color: #0097bc;
 }
 .wrapper {
-	width: 500px;
-	margin: 25px auto;	
+	width: 1000;
+	margin: 50px auto;	
 }
 .marquee {
-	width: 500px;
-	height: 50px;
-	margin: 25px auto;
+	width: 1000px;
+	height: 100px;
+	margin: 50px auto;
 	overflow: hidden;
 	position: relative;
 	border: 1px solid #000;
-	font-size:30px;
+	font-size: 80px;
 
 	background-color: #222;
 
@@ -49,7 +49,7 @@ a:hover {
 	height: 100%;
 
 	margin: 0;
-	line-height: 50px;
+	line-height: 100px;
 
 	text-align: center;
 
@@ -92,14 +92,14 @@ a:hover {
 	-webkit-transform:translateY(100%);
 }
 .marquee.up p:nth-child(1) {
-	animation: up-one 20s ease infinite;
-	-moz-animation: up-one 20s ease infinite;
-	-webkit-animation: up-one 20s ease infinite;
+	animation: up-one 10s ease infinite;
+	-moz-animation: up-one 10s ease infinite;
+	-webkit-animation: up-one 10s ease infinite;
 }
 .marquee.up p:nth-child(2) {
-	animation: up-two 20s ease infinite;
-	-moz-animation: up-two 20s ease infinite;
-	-webkit-animation: up-two 20s ease infinite;
+	animation: up-two 10s ease infinite;
+	-moz-animation: up-two 10s ease infinite;
+	-webkit-animation: up-two 10s ease infinite;
 }
 
 /*================================
@@ -286,11 +286,8 @@ a:hover {
 	10% {
 		-webkit-transform:translateY(0);
 	}
-	40% {
+	90% {
 		-webkit-transform:translateY(0);
-	}
-	50% {
-		-webkit-transform:translateY(-100%);
 	}
 	100%{
 		-webkit-transform:translateY(-100%);
