Removing left & right margins

--- a/web/styles/styles.css
+++ b/web/styles/styles.css
@@ -15,13 +15,15 @@ a:hover {
 	color: #0097bc;
 }
 .wrapper {
-	width: 1830px;
-	margin: 50px auto;	
+	width: 1800px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 .marquee {
-	width: 1830px;
+	width: 1800px;
 	height: 100px;
-	margin: 50px auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
 	overflow: hidden;
 	position: relative;
 	border: 1px solid #000;
